# gh_k1_lab04

./: CMakeLists.txt  Ch.txt  CodePad.txt  Code_pad.txt  Sdana_lab06code.cpp  Sdana_lab6code.cpp  Sdana_lab7code.cpp  Sdana_lab8code.cpp  TextCode.txt  TextRus.txt  Text_codeC.txt  Text_encryptC.txt  cod.txt  decod.txt  decod2.txt  encoded.txt  file_input_output.cpp  ifout.cpp  lab04_zadanie  lab05_zadanie  lab06_zadanie  lab07_zadanie  lab2code.cpp  lab3_zadanie  main.cpp  mainLab02.cpp  mainLab03.cpp  mainLab04.cpp  mainLab05.cpp  mainLab06.cpp  mainLab07_2.cpp  mainLab08.cpp  main_lab07.cpp  mainlab07.cpp  obmen.cpp  out_char.txt  t.cpp  temp.cpp  text.txt  text_out.txt
