cmake_minimum_required(VERSION 3.14)
project(gh_k1_lab04)

set(CMAKE_CXX_STANDARD 14)

add_executable(gh_k1_lab04
        mainLab02.cpp
        #mainLab03.cpp
    #mainLab04.cpp
        #mainLab05.cpp
        #mainLab06.cpp
        #obmen.cpp
       #temp.cpp
        #Sdana_lab4code.cpp
        #Sdana_lab5code.cpp
        #Sdana_lab6code.cpp
        #Sdana_lab7code.cpp
        #Sdana_lab8code.cpp
        #mainlab07.cpp
        #mainlab08.cpp
        )
